# krypton_engine

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  format.py  setup.py  vcpkg.json
src/assets/: CMakeLists.txt
src/assets/include/assets/: material.hpp  mesh.hpp  primitive.hpp  scene.hpp  texture.hpp  vertex.hpp
src/assets/include/assets/loader/: fileloader.hpp  ktx_loader.hpp
src/assets/loader/: fileloader.cpp  ktx_loader.cpp
src/carbon/: CMakeLists.txt  README.md  context.cpp  context.hpp  utils.hpp
src/carbon/base/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  crash_tracker.cpp  crash_tracker.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  renderpass.cpp  renderpass.hpp  semaphore.cpp  semaphore.hpp  swapchain.cpp  swapchain.hpp
src/carbon/include/carbon/: utils.hpp
src/carbon/include/carbon/base/: command_buffer.hpp  command_pool.hpp  crash_tracker.hpp  device.hpp  fence.hpp  instance.hpp  physical_device.hpp  queue.hpp  renderpass.hpp  semaphore.hpp  swapchain.hpp
src/carbon/include/carbon/pipeline/: descriptor_set.hpp  graphics_pipeline.hpp  pipeline.hpp
src/carbon/include/carbon/resource/: buffer.hpp  image.hpp  stagingbuffer.hpp  storageimage.hpp  texture.hpp
src/carbon/include/carbon/rt/: acceleration_structure.hpp  rt_pipeline.hpp
src/carbon/include/carbon/shaders/: shader.hpp  shader_database.hpp  shader_stage.hpp
src/carbon/pipeline/: descriptor_set.cpp  graphics_pipeline.cpp
src/carbon/resource/: buffer.cpp  buffer.hpp  image.cpp  image.hpp  stagingbuffer.cpp  stagingbuffer.hpp  storageimage.cpp  storageimage.hpp  texture.cpp  texture.hpp
src/carbon/rt/: acceleration_structure.cpp  acceleration_structure.hpp  rt_pipeline.cpp  rt_pipeline.hpp
src/carbon/shaders/: file_includer.cpp  file_includer.hpp  shader.cpp  shader.hpp  shader_database.cpp  shader_database.hpp
src/core/: CMakeLists.txt  README.md  frame_graph.hpp  framegraph.cpp  imgui_console.cpp  imgui_renderer.cpp  main.cpp
src/core/include/core/: imgui_console.hpp  imgui_renderer.hpp
src/mesh/: CMakeLists.txt  material.hpp  texture.hpp
src/mesh/include/mesh/: material.hpp  mesh.hpp  primitive.hpp  scene.hpp  texture.hpp  vertex.hpp
src/metal/: CMakeLists.txt  README.md
src/models/: CMakeLists.txt  fileloader.cpp
src/models/include/models/: fileloader.hpp
src/rapi/: CMakeLists.txt  README.md  backend_metal.cpp  backend_vulkan.cpp  fsr_util.cpp  metal_backend.cpp  rapi.cpp  rapi.hpp  rapi_backends.hpp  shader.cpp  vulkan_backend.cpp  window.cpp  window.hpp  window_cocoa.mm
src/rapi/backends/: metal_backend.cpp  metal_backend.hpp  metal_backend.mm  vulkan_backend.cpp  vulkan_rt_backend.cpp  vulkan_rt_backend.hpp
src/rapi/backends/metal/: metal_layer_bridge.mm
src/rapi/backends/vulkan/: texture.cpp
src/rapi/include/rapi/: backend_metal.hpp  backend_vulkan.hpp  camera.hpp  color_encoding.hpp  fsr_util.hpp  ibuffer.hpp  icommandbuffer.hpp  idevice.hpp  ievent.hpp  ipipeline.hpp  iqueue.hpp  irenderpass.hpp  isampler.hpp  isemaphore.hpp  ishader.hpp  ishaderparameter.hpp  iswapchain.hpp  isync.hpp  itexture.hpp  metal_backend.hpp  object_handles.hpp  rapi.hpp  rapi_backends.hpp  render_object_handle.hpp  render_pass_attachments.hpp  texture_format.hpp  textures.hpp  vertex_descriptor.hpp  vulkan_backend.hpp  window.hpp
src/rapi/include/rapi/backends/: metal_backend.hpp  vulkan_backend.hpp  vulkan_rt_backend.hpp
src/rapi/include/rapi/metal/: CAMetalLayer.hpp  glfw_cocoa_bridge.hpp  material.hpp  material_buffer.hpp  metal_buffer.hpp  metal_command_buffer.hpp  metal_cpp_util.hpp  metal_device.hpp  metal_layer_bridge.hpp  metal_layer_wrapper.hpp  metal_pipeline.hpp  metal_queue.hpp  metal_renderpass.hpp  metal_sampler.hpp  metal_shader.hpp  metal_shaderparameter.hpp  metal_swapchain.hpp  metal_sync.hpp  metal_texture.hpp  render_object.hpp  render_pass.hpp  shader_types.hpp  texture.hpp
src/rapi/include/rapi/vulkan/: buffer_descriptions.hpp  render_object.hpp  vk_buffer.hpp  vk_command_buffer.hpp  vk_device.hpp  vk_fmt.hpp  vk_instance.hpp  vk_pipeline.hpp  vk_queue.hpp  vk_renderpass.hpp  vk_sampler.hpp  vk_shader.hpp  vk_shaderparameter.hpp  vk_struct_chain.hpp  vk_swapchain.hpp  vk_sync.hpp  (+2 more)
src/rapi/metal/: glfw_cocoa_bridge.mm  metal_buffer.cpp  metal_command_buffer.cpp  metal_cpp.cpp  metal_cpp_impl.cpp  metal_device.cpp  metal_layer_bridge.mm  metal_pipeline.cpp  metal_queue.cpp  metal_renderpass.cpp  metal_sampler.cpp  metal_shader.cpp  metal_shader.mm  metal_shaderparameter.mm  metal_swapchain.cpp  metal_sync.cpp  metal_texture.cpp
src/rapi/vulkan/: vk_buffer.cpp  vk_command_buffer.cpp  vk_device.cpp  vk_instance.cpp  vk_pipeline.cpp  vk_queue.cpp  vk_renderpass.cpp  vk_sampler.cpp  vk_shader.cpp  vk_shaderparameter.cpp  vk_swapchain.cpp  vk_sync.cpp  vk_texture.cpp  vma_implementation.cpp  volk_implementation.cpp
src/shaders/: CMakeLists.txt  README.md  file_includer.cpp  file_includer.hpp  shader.cpp  shader.hpp  shaders.cpp  shaders.hpp
src/shaders/glsl/: basic_frag.frag  basic_vert.vert  closesthit.rchit  fsr_pass.glsl  miss.rmiss  raygen.rgen  ui.frag  ui.vert  ui2.vert
src/shaders/include/shaders/: glslang_resource.hpp  shader_types.hpp  shaders.hpp
src/shaders/metal/: fsr.metal  fsr_fp32.metal  shaders.metal
src/shaders/slang/: main.slang
src/shaders/spirv/: frag.spv  ui_frag.spv  ui_vert.spv  vert.spv
src/threading/: CMakeLists.txt  README.md  scheduler.cpp
src/threading/include/threading/: scheduler.hpp
src/util/: CMakeLists.txt  logging.cpp  reference_counter.cpp  scheduler.cpp
src/util/include/util/: assert.hpp  attributes.hpp  bits.hpp  byte_literals.hpp  consteval_pow.hpp  debug.hpp  free_list.hpp  handle.hpp  large_free_list.hpp  large_vector.hpp  logging.hpp  nameable.hpp  reference_counter.hpp  scheduler.hpp  template_string_literal.hpp
submodules/: CMakeLists.txt
(+15 files in other folders)
